# Videograber

./: .env.example  .gitignore  Dockerfile  Makefile  Project.md  README.md  docker-compose.yaml  pyproject.toml
src/bot/: __main__.py  config.py  logging_config.py  main.py
src/bot/handlers/: __init__.py  errors.py  start.py  url_handler.py
src/scripts/: run_dev.sh
src/services/: api_client.py  converter.py  downloader.py  mock_data.py
src/tests/: conftest.py  test_api_client.py  test_converter.py  test_mock_data.py  test_url_validator.py
src/utils/: file_utils.py  formatters.py  url_validator.py
